// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingLabel renders 1`] = `
<DocumentFragment>
  <span
    class="mdc-floating-label"
  />
</DocumentFragment>
`;

exports[`FloatingLabel renders with float 1`] = `
<DocumentFragment>
  <span
    class="mdc-floating-label mdc-floating-label--float-above"
  />
</DocumentFragment>
`;
